# json-validator

./: .gitignore  .pre-commit-config.yaml  JOURNAL.md  README.md  pyproject.toml
.github/workflows/: ci.yml
